<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5ABF93"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_menu_bienvenida"
        android:layout_width="222dp"
        android:layout_height="101dp"
        android:layout_marginTop="100dp"
        android:background="#4886A6"
        android:text="@string/Menu_Bienvenida"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="147dp"
        android:layout_height="66dp"
        android:layout_marginTop="104dp"
        android:onClick="IrARegistro"
        android:text="@string/Menu_Registrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_bienvenida" />

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="148dp"
        android:layout_height="73dp"
        android:layout_marginTop="228dp"
        android:onClick="IrAInicioSesion"
        android:text="@string/Menu_IniciaSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_bienvenida" />

</androidx.constraintlayout.widget.ConstraintLayout>